fix content overlaped by nav bar

--- a/MonitoringFinances/wwwroot/css/HomeIndex.css
+++ b/MonitoringFinances/wwwroot/css/HomeIndex.css
@@ -29,7 +29,7 @@ section {
 
 .masthead {
   background-color: #f8f9fa;
-  padding-top: 8rem;
+  padding-top: 3rem;
   padding-bottom: 3rem;
 }
 .masthead .masthead-device-mockup {
